--- a/nginx.conf
+++ b/nginx.conf
@@ -122,7 +122,7 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-                proxy_pass http://${host}/;
+                proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -157,7 +157,7 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-                proxy_pass http://${host}/;
+                proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -192,7 +192,7 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-                proxy_pass http://${host}/;
+                proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header X-Real-IP $remote_addr;
