--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy #####
+##### Nginx Caching Reverse Proxy v1.3 #####
 
 
 user  nginx;
@@ -24,15 +24,19 @@ stream {
         ssl_preread             on;
         proxy_pass              "${ssl_preread_server_name}:443";
     }
+    log_format ssl '[SSL] $remote_addr [$time_local] '
+                 '$protocol $status $bytes_sent $bytes_received '
+                 '$session_time "$ssl_preread_server_name"';
+    access_log /var/log/nginx/access.log ssl buffer=512;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format  main  '[HTTP] $remote_addr [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" "$host" "$upstream_cache_status"';
+                      '"$http_user_agent" "$host" "$upstream_cache_status"';
 
     server_names_hash_max_size  1024;
 
@@ -66,8 +70,8 @@ http {
     }
 
     server {
-        listen       *:80;
-        listen       *:8530;
+        listen       80;
+        listen       8530;
         server_name  wsus.tsv.catholic.edu.au;
         ignore_invalid_headers      off;
 
@@ -100,7 +104,7 @@ http {
     ############## Begin Apple Cache ##############
 
     server {
-        listen       *:80;
+        listen       80;
         server_name  appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com;
         ignore_invalid_headers      off;
 
@@ -110,7 +114,7 @@ http {
         send_timeout                300;
 
         proxy_cache wsus-cache;
-        proxy_cache_valid 200 60d;
+        proxy_cache_valid 200 30d;
         proxy_cache_lock on;
 
         # Delay until cached
@@ -125,8 +129,7 @@ http {
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_ignore_headers Cache-Control;
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
         }
     }
 
@@ -135,7 +138,7 @@ http {
     ############## Begin Microsoft Cache ##############
 
     server {
-        listen       *:80;
+        listen       80;
         server_name  *.windowsupdate.microsoft.com *.download.windowsupdate.com windowsupdate.microsoft.com download.windowsupdate.com;
         ignore_invalid_headers      off;
 
@@ -145,7 +148,7 @@ http {
         send_timeout                300;
 
         proxy_cache wsus-cache;
-        proxy_cache_valid 200 60d;
+        proxy_cache_valid 200 30d;
         proxy_cache_lock on;
 
         # Immediately forward requests to the origin if we are filling the cache
@@ -160,8 +163,7 @@ http {
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_ignore_headers Cache-Control;
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
         }
     }
 
@@ -170,8 +172,8 @@ http {
     ############## Begin Google Cache ##############
 
     server {
-        listen       *:80;
-        server_name  dl.google.com;
+        listen       80;
+        server_name  dl.google.com *.gvt1.com;
         ignore_invalid_headers      off;
 
         proxy_connect_timeout       300;
@@ -180,7 +182,7 @@ http {
         send_timeout                300;
 
         proxy_cache wsus-cache;
-        proxy_cache_valid 200 14d;
+        proxy_cache_valid 200 30d;
         proxy_cache_lock on;
 
         # Delay until cached
@@ -195,10 +197,42 @@ http {
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_ignore_headers Cache-Control;
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
         }
     }
 
     ############## End Google Cache ##############   
+
+    ############## Anything Else ##############
+
+    server {
+        listen       80 default_server;
+        ignore_invalid_headers      off;
+
+        proxy_connect_timeout       300;
+        proxy_send_timeout          300;
+        proxy_read_timeout          300;
+        send_timeout                300;
+
+        proxy_cache wsus-cache;
+        proxy_cache_valid 200 14d;
+        proxy_cache_lock on;
+
+        # Delay until cached
+        proxy_cache_lock_timeout 600s;
+
+        # Set the 'age' to a value larger than the expected fill time
+        proxy_cache_lock_age 600s;
+        proxy_cache_use_stale updating;
+
+        location / {
+                proxy_pass http://${host};
+                proxy_pass_request_headers      on;
+                proxy_set_header Host      $host;
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+        }
+    }
+
+    ############## Anything Else ##############
+
 }
