--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.3 #####
-
+##### Nginx Caching Reverse Proxy v1.4 #####
 
 user  nginx;
 worker_processes  auto;
@@ -15,7 +14,7 @@ events {
 
 stream {
     ######## Set resolvers against DNS servers not used for local interception ########
-    resolver 10.112.4.11 10.112.4.12;
+    resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
     ######## Pass through SSL connections upstream ########
     server {
@@ -36,14 +35,14 @@ http {
 
     log_format  main  '[HTTP] $remote_addr [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$host" "$upstream_cache_status"';
+                      '"$http_user_agent" "$host" "$slice_range" "$upstream_cache_status"';
 
     server_names_hash_max_size  1024;
 
     ######## Set resolvers against DNS servers not used for local interception ########
-    resolver 10.112.4.11 10.112.4.12;
+    resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
-    proxy_cache_path /var/cache/nginx/wsus-cache keys_zone=wsus-cache:10m max_size=80g inactive=7d use_temp_path=off;
+    proxy_cache_path /var/cache/nginx/cache keys_zone=cache:10m max_size=80g inactive=3d use_temp_path=off;
 
     access_log  /var/log/nginx/access.log main buffer=512;
 
@@ -80,25 +79,27 @@ http {
         proxy_read_timeout          300;
         send_timeout                300;
 
-        proxy_cache wsus-cache;
-        proxy_cache_valid 200 14d;
+        proxy_cache cache;
+        proxy_cache_valid 200 206 30d;
         proxy_cache_lock on;
 
         # Immediately forward requests to the origin if we are filling the cache
-        proxy_cache_lock_timeout 0s;
+        proxy_cache_lock_timeout 600s;
+        proxy_cache_key "$server_name$uri $slice_range";
+        slice 16M;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 600s;
+        proxy_cache_lock_age 1d;
         proxy_cache_use_stale updating;
 
         location / {
+                proxy_http_version 1.1;
                 proxy_pass http://wsus/;
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
-                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header Range     $slice_range;
         }
     }
-
     ############## End WSUS Cache ##############
 
     ############## Begin Apple Cache ##############
@@ -113,7 +114,7 @@ http {
         proxy_read_timeout          300;
         send_timeout                300;
 
-        proxy_cache wsus-cache;
+        proxy_cache cache;
         proxy_cache_valid 200 30d;
         proxy_cache_lock on;
 
@@ -122,14 +123,16 @@ http {
         proxy_cache_key *.apple.com${uri};
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 600s;
+        proxy_cache_lock_age 1d;
         proxy_cache_use_stale updating;
 
         location / {
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
+                proxy_set_header Upgrade-Insecure-Requests "";
                 proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
         }
     }
 
@@ -139,7 +142,7 @@ http {
 
     server {
         listen       80;
-        server_name  *.windowsupdate.microsoft.com *.download.windowsupdate.com windowsupdate.microsoft.com download.windowsupdate.com;
+        server_name tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com windowsupdate.microsoft.com *.windowsupdate.microsoft.com download.windowsupdate.com *.download.windowsupdate.com;
         ignore_invalid_headers      off;
 
         proxy_connect_timeout       300;
@@ -147,25 +150,31 @@ http {
         proxy_read_timeout          300;
         send_timeout                300;
 
-        proxy_cache wsus-cache;
-        proxy_cache_valid 200 30d;
+        proxy_cache cache;
+        proxy_cache_valid 200 206 30d;
         proxy_cache_lock on;
 
         # Immediately forward requests to the origin if we are filling the cache
-        proxy_cache_lock_timeout 0s;
-        proxy_cache_key *.microsoft.com${uri};
+        proxy_cache_lock_timeout 600s;
+        proxy_cache_key "$server_name$uri $slice_range";
+        slice 16M;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 600s;
+        proxy_cache_lock_age 1d;
         proxy_cache_use_stale updating;
 
         location / {
+                proxy_http_version 1.1;
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
+                proxy_set_header Range     $slice_range;
+                proxy_set_header Upgrade-Insecure-Requests "";
                 proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
         }
     }
+
 
     ############## End Microsoft Cache ############## 
 
@@ -173,7 +182,7 @@ http {
 
     server {
         listen       80;
-        server_name  dl.google.com *.gvt1.com;
+        server_name  *.gvt1.com dl.google.com;
         ignore_invalid_headers      off;
 
         proxy_connect_timeout       300;
@@ -181,29 +190,34 @@ http {
         proxy_read_timeout          300;
         send_timeout                300;
 
-        proxy_cache wsus-cache;
-        proxy_cache_valid 200 30d;
+        proxy_cache cache;
+        proxy_cache_valid 200 206 30d;
         proxy_cache_lock on;
 
-        # Delay until cached
+        # Immediately forward requests to the origin if we are filling the cache
         proxy_cache_lock_timeout 600s;
-        proxy_cache_key dl.google.com${uri};
+        proxy_cache_key "$server_name$uri $slice_range";
+        slice 16M;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 600s;
+        proxy_cache_lock_age 1d;
         proxy_cache_use_stale updating;
 
         location / {
+                proxy_http_version 1.1;
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
+                proxy_set_header Range     $slice_range;
+                proxy_set_header Upgrade-Insecure-Requests "";
                 proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
         }
     }
 
     ############## End Google Cache ##############   
 
-    ############## Anything Else ##############
+    ############## Begin Anything Else ##############
 
     server {
         listen       80 default_server;
@@ -214,7 +228,7 @@ http {
         proxy_read_timeout          300;
         send_timeout                300;
 
-        proxy_cache wsus-cache;
+        proxy_cache cache;
         proxy_cache_valid 200 14d;
         proxy_cache_lock on;
 
@@ -222,17 +236,19 @@ http {
         proxy_cache_lock_timeout 600s;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 600s;
+        proxy_cache_lock_age 1d;
+        proxy_cache_key "$server_name$uri";
         proxy_cache_use_stale updating;
 
         location / {
                 proxy_pass http://${host};
+                proxy_http_version 1.1;
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
+                proxy_set_header Upgrade-Insecure-Requests "";
                 proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
         }
     }
-
-    ############## Anything Else ##############
-
+    ############## End Anything Else ##############
 }
