--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.4 #####
+##### Nginx Caching Reverse Proxy v1.5 #####
 
 user  nginx;
 worker_processes  auto;
@@ -42,7 +42,7 @@ http {
     ######## Set resolvers against DNS servers not used for local interception ########
     resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
-    proxy_cache_path /var/cache/nginx/cache keys_zone=cache:10m max_size=80g inactive=3d use_temp_path=off;
+    proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=3d use_temp_path=off;
 
     access_log  /var/log/nginx/access.log main buffer=512;
 
@@ -52,8 +52,8 @@ http {
     #Timeouts
     keepalive_timeout 60;
     keepalive_requests 512;
-    client_max_body_size 300M;
-    client_body_buffer_size 10M;
+    client_max_body_size 5g;
+    client_body_buffer_size 10m;
 
     gzip  on;
     gzip_comp_level  2;
@@ -80,16 +80,16 @@ http {
         send_timeout                300;
 
         proxy_cache cache;
-        proxy_cache_valid 200 206 30d;
+        proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
 
         # Immediately forward requests to the origin if we are filling the cache
         proxy_cache_lock_timeout 600s;
-        proxy_cache_key "$server_name$uri $slice_range";
+        proxy_cache_key "$host$uri $slice_range";
         slice 16M;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 1d;
+        proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
 
         location / {
@@ -102,122 +102,7 @@ http {
     }
     ############## End WSUS Cache ##############
 
-    ############## Begin Apple Cache ##############
-
-    server {
-        listen       80;
-        server_name  appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com;
-        ignore_invalid_headers      off;
-
-        proxy_connect_timeout       300;
-        proxy_send_timeout          300;
-        proxy_read_timeout          300;
-        send_timeout                300;
-
-        proxy_cache cache;
-        proxy_cache_valid 200 30d;
-        proxy_cache_lock on;
-
-        # Delay until cached
-        proxy_cache_lock_timeout 600s;
-        proxy_cache_key *.apple.com${uri};
-
-        # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 1d;
-        proxy_cache_use_stale updating;
-
-        location / {
-                proxy_pass http://${host};
-                proxy_pass_request_headers      on;
-                proxy_set_header Host      $host;
-                proxy_set_header Upgrade-Insecure-Requests "";
-                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
-                proxy_hide_header ETag;
-        }
-    }
-
-    ############## End Apple Cache ##############
-
-    ############## Begin Microsoft Cache ##############
-
-    server {
-        listen       80;
-        server_name tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com windowsupdate.microsoft.com *.windowsupdate.microsoft.com download.windowsupdate.com *.download.windowsupdate.com;
-        ignore_invalid_headers      off;
-
-        proxy_connect_timeout       300;
-        proxy_send_timeout          300;
-        proxy_read_timeout          300;
-        send_timeout                300;
-
-        proxy_cache cache;
-        proxy_cache_valid 200 206 30d;
-        proxy_cache_lock on;
-
-        # Immediately forward requests to the origin if we are filling the cache
-        proxy_cache_lock_timeout 600s;
-        proxy_cache_key "$server_name$uri $slice_range";
-        slice 16M;
-
-        # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 1d;
-        proxy_cache_use_stale updating;
-
-        location / {
-                proxy_http_version 1.1;
-                proxy_pass http://${host};
-                proxy_pass_request_headers      on;
-                proxy_set_header Host      $host;
-                proxy_set_header Range     $slice_range;
-                proxy_set_header Upgrade-Insecure-Requests "";
-                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
-                proxy_hide_header ETag;
-        }
-    }
-
-
-    ############## End Microsoft Cache ############## 
-
-    ############## Begin Google Cache ##############
-
-    server {
-        listen       80;
-        server_name  *.gvt1.com dl.google.com;
-        ignore_invalid_headers      off;
-
-        proxy_connect_timeout       300;
-        proxy_send_timeout          300;
-        proxy_read_timeout          300;
-        send_timeout                300;
-
-        proxy_cache cache;
-        proxy_cache_valid 200 206 30d;
-        proxy_cache_lock on;
-
-        # Immediately forward requests to the origin if we are filling the cache
-        proxy_cache_lock_timeout 600s;
-        proxy_cache_key "$server_name$uri $slice_range";
-        slice 16M;
-
-        # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 1d;
-        proxy_cache_use_stale updating;
-
-        location / {
-                proxy_http_version 1.1;
-                proxy_pass http://${host};
-                proxy_pass_request_headers      on;
-                proxy_set_header Host      $host;
-                proxy_set_header Range     $slice_range;
-                proxy_set_header Upgrade-Insecure-Requests "";
-                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
-                proxy_hide_header ETag;
-        }
-    }
-
-    ############## End Google Cache ##############   
-
-    ############## Begin Anything Else ##############
+    ############## Begin Default Cache ##############
 
     server {
         listen       80 default_server;
@@ -229,26 +114,28 @@ http {
         send_timeout                300;
 
         proxy_cache cache;
-        proxy_cache_valid 200 14d;
+        proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
 
-        # Delay until cached
+        # Wait x seconds before sending file to client
         proxy_cache_lock_timeout 600s;
+        proxy_cache_key "$host$uri $slice_range";
+        slice 16M;
 
         # Set the 'age' to a value larger than the expected fill time
-        proxy_cache_lock_age 1d;
-        proxy_cache_key "$server_name$uri";
+        proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
 
         location / {
-                proxy_pass http://${host};
                 proxy_http_version 1.1;
+                proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
+                proxy_set_header Range     $slice_range;
                 proxy_set_header Upgrade-Insecure-Requests "";
                 proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
                 proxy_hide_header ETag;
         }
     }
-    ############## End Anything Else ##############
+    ############## End Default Cache ############## 
 }
