--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.5 #####
+##### Nginx Caching Reverse Proxy v1.6 #####
 
 user  nginx;
 worker_processes  auto;
@@ -35,14 +35,12 @@ http {
 
     log_format  main  '[HTTP] $remote_addr [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$host" "$slice_range" "$upstream_cache_status"';
-
-    server_names_hash_max_size  1024;
+                      '"$http_user_agent" "$host" "$upstream_cache_status" "$upstream_http_content_range" $range_no_cache';
 
     ######## Set resolvers against DNS servers not used for local interception ########
     resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
-    proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=3d use_temp_path=off;
+    proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=7d use_temp_path=off;
 
     access_log  /var/log/nginx/access.log main buffer=512;
 
@@ -52,19 +50,22 @@ http {
     #Timeouts
     keepalive_timeout 60;
     keepalive_requests 512;
-    client_max_body_size 5g;
-    client_body_buffer_size 10m;
+    client_max_body_size 5G;
+    client_body_buffer_size 10M;
+    server_names_hash_max_size  1024;
 
-    gzip  on;
-    gzip_comp_level  2;
-    gzip_min_length  1000;
-    gzip_proxied     expired no-cache no-store private auth;
-    gzip_types       text/plain application/x-javascript text/xml text/css application/xml;
+    ######## Files Larger than 5GB, No Cache Map ########
+    map $upstream_http_content_range $range_no_cache {
+        default 1;
+        "~^bytes .*/([1-9][0-9]{0,8}|[1-4][0-9]{9})$" 0;
+    }
 
     ############## Begin WSUS Cache ##############
 
     upstream wsus {
+	######## Legacy WAN Sites ########
         server 10.112.8.30:8530;
+	######## NBN Sites ########
         #server 113.29.212.33:8530;
     }
 
@@ -73,25 +74,18 @@ http {
         listen       8530;
         server_name  wsus.tsv.catholic.edu.au;
         ignore_invalid_headers      off;
-
         proxy_connect_timeout       300;
         proxy_send_timeout          300;
         proxy_read_timeout          300;
         send_timeout                300;
-
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
-
-        # Immediately forward requests to the origin if we are filling the cache
         proxy_cache_lock_timeout 600s;
         proxy_cache_key "$host$uri $slice_range";
         slice 16M;
-
-        # Set the 'age' to a value larger than the expected fill time
         proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
-
         location / {
                 proxy_http_version 1.1;
                 proxy_pass http://wsus/;
@@ -107,25 +101,19 @@ http {
     server {
         listen       80 default_server;
         ignore_invalid_headers      off;
-
         proxy_connect_timeout       300;
         proxy_send_timeout          300;
         proxy_read_timeout          300;
         send_timeout                300;
-
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
-
-        # Wait x seconds before sending file to client
         proxy_cache_lock_timeout 600s;
         proxy_cache_key "$host$uri $slice_range";
+        proxy_no_cache $range_no_cache;
         slice 16M;
-
-        # Set the 'age' to a value larger than the expected fill time
         proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
-
         location / {
                 proxy_http_version 1.1;
                 proxy_pass http://${host};
