--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.6 #####
+##### Nginx Caching Reverse Proxy v1.7 #####
 
 user  nginx;
 worker_processes  auto;
@@ -35,7 +35,7 @@ http {
 
     log_format  main  '[HTTP] $remote_addr [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$host" "$upstream_cache_status" "$upstream_http_content_range" $range_no_cache';
+                      '"$http_user_agent" "$host" "$upstream_cache_status" "$upstream_http_content_range"';
 
     ######## Set resolvers against DNS servers not used for local interception ########
     resolver 10.112.4.11 10.112.4.12 ipv6=off;
@@ -54,18 +54,10 @@ http {
     client_body_buffer_size 10M;
     server_names_hash_max_size  1024;
 
-    ######## Files Larger than 5GB, No Cache Map ########
-    map $upstream_http_content_range $range_no_cache {
-        default 1;
-        "~^bytes .*/([1-9][0-9]{0,8}|[1-4][0-9]{9})$" 0;
-    }
-
     ############## Begin WSUS Cache ##############
 
     upstream wsus {
-	######## Legacy WAN Sites ########
         server 10.112.8.30:8530;
-	######## NBN Sites ########
         #server 113.29.212.33:8530;
     }
 
@@ -74,21 +66,31 @@ http {
         listen       8530;
         server_name  wsus.tsv.catholic.edu.au;
         ignore_invalid_headers      off;
+
         proxy_connect_timeout       300;
         proxy_send_timeout          300;
         proxy_read_timeout          300;
         send_timeout                300;
+
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
+
+        # Immediately forward requests to the origin if we are filling the cache
         proxy_cache_lock_timeout 600s;
         proxy_cache_key "$host$uri $slice_range";
         slice 16M;
+
+        # Set the 'age' to a value larger than the expected fill time
         proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
+
         location / {
                 proxy_http_version 1.1;
                 proxy_pass http://wsus/;
+                if ($request_method = HEAD ) {
+                        set $nocache 1;
+                }
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header Range     $slice_range;
@@ -101,22 +103,31 @@ http {
     server {
         listen       80 default_server;
         ignore_invalid_headers      off;
+
         proxy_connect_timeout       300;
         proxy_send_timeout          300;
         proxy_read_timeout          300;
         send_timeout                300;
+
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
         proxy_cache_lock on;
+
+        # Wait x seconds before sending file to client
         proxy_cache_lock_timeout 600s;
         proxy_cache_key "$host$uri $slice_range";
-        proxy_no_cache $range_no_cache;
         slice 16M;
+
+        # Set the 'age' to a value larger than the expected fill time
         proxy_cache_lock_age 600s;
         proxy_cache_use_stale updating;
+
         location / {
                 proxy_http_version 1.1;
                 proxy_pass http://${host};
+                if ($request_method = HEAD ) {
+                        set $nocache 1;
+                }
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header Range     $slice_range;
