--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.7 #####
+##### Nginx Caching Reverse Proxy v1.8 #####
 
 user  nginx;
 worker_processes  auto;
@@ -86,11 +86,16 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
+
+                # Set no cache of HEAD request methods
+                set $nocache 0; 
+                if ($request_method = HEAD ) {                
+                        set $nocache 1;        
+                }
+                proxy_no_cache $nocache;
+
                 proxy_http_version 1.1;
                 proxy_pass http://wsus/;
-                if ($request_method = HEAD ) {
-                        set $nocache 1;
-                }
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header Range     $slice_range;
@@ -123,11 +128,16 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-                proxy_http_version 1.1;
-                proxy_pass http://${host};
+
+                # Set no cache of HEAD request methods
+                set $nocache 0;
                 if ($request_method = HEAD ) {
                         set $nocache 1;
                 }
+                proxy_no_cache $nocache;
+
+                proxy_http_version 1.1;
+                proxy_pass http://${host};
                 proxy_pass_request_headers      on;
                 proxy_set_header Host      $host;
                 proxy_set_header Range     $slice_range;
