--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.8 #####
+##### Nginx Caching Reverse Proxy v1.9 #####
 
 user  nginx;
 worker_processes  auto;
@@ -103,7 +103,53 @@ http {
     }
     ############## End WSUS Cache ##############
 
-    ############## Begin Default Cache ##############
+    ############## Begin Microsoft Cache ##############
+
+    server {
+        listen       80;
+        ignore_invalid_headers      off;
+        server_name     windowsupdate.microsoft.com download.windowsupdate.com tlu.dl.delivery.mp.microsoft.com *.windowsupdate.microsoft.com *.download.windowsupdate.com *.tlu.dl.delivery.mp.microsoft.com;
+
+        proxy_connect_timeout       300;
+        proxy_send_timeout          300;
+        proxy_read_timeout          300;
+        send_timeout                300;
+
+        proxy_cache cache;
+        proxy_cache_valid 200 206 14d;
+        proxy_cache_lock on;
+
+        # Wait x seconds before sending file to client
+        proxy_cache_lock_timeout 600s;
+        proxy_cache_key "$uri $slice_range";
+        slice 16M;
+
+        # Set the 'age' to a value larger than the expected fill time
+        proxy_cache_lock_age 600s;
+        proxy_cache_use_stale updating;
+
+        location / {
+
+                # Set no cache of HEAD request methods
+                set $nocache 0;
+                if ($request_method = HEAD ) {
+                        set $nocache 1;
+                }
+                proxy_no_cache $nocache;
+
+                proxy_http_version 1.1;
+                proxy_pass http://${host};
+                proxy_pass_request_headers      on;
+                proxy_set_header Host      $host;
+                proxy_set_header Range     $slice_range;
+                proxy_set_header Upgrade-Insecure-Requests "";
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
+        }
+    }
+    ############## End Microsoft Cache ##############
+
+    ############## Begin Default Cache (Everything Else) ##############
 
     server {
         listen       80 default_server;
@@ -146,5 +192,5 @@ http {
                 proxy_hide_header ETag;
         }
     }
-    ############## End Default Cache ############## 
+    ############## End Default Cache (Everything Else) ############## 
 }
