--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v1.9 #####
+##### Nginx Caching Reverse Proxy v2.0 #####
 
 user  nginx;
 worker_processes  auto;
@@ -23,9 +23,7 @@ stream {
         ssl_preread             on;
         proxy_pass              "${ssl_preread_server_name}:443";
     }
-    log_format ssl '[SSL] $remote_addr [$time_local] '
-                 '$protocol $status $bytes_sent $bytes_received '
-                 '$session_time "$ssl_preread_server_name"';
+    log_format ssl '[SSL] $remote_addr [$time_local] $protocol $status $bytes_sent $bytes_received $session_time "$ssl_preread_server_name"';
     access_log /var/log/nginx/access.log ssl buffer=512;
 }
 
@@ -33,9 +31,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '[HTTP] $remote_addr [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$host" "$upstream_cache_status" "$upstream_http_content_range"';
+    log_format  main  '[HTTP] $remote_addr [$time_local] $status $request_method "$host$uri" "$http_user_agent" "CACHE=$upstream_cache_status"';
 
     ######## Set resolvers against DNS servers not used for local interception ########
     resolver 10.112.4.11 10.112.4.12 ipv6=off;
@@ -53,6 +49,12 @@ http {
     client_max_body_size 5G;
     client_body_buffer_size 10M;
     server_names_hash_max_size  1024;
+
+    ######## Regexp for files larger than 5GB ########
+    map $upstream_http_content_range $range_no_cache {
+        default 1;
+        "~^bytes .*/([1-9][0-9]{0,8}|[1-4][0-9]{9})$" 0;
+    }
 
     ############## Begin WSUS Cache ##############
 
@@ -74,6 +76,7 @@ http {
 
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
+        proxy_cache_methods GET;
         proxy_cache_lock on;
 
         # Immediately forward requests to the origin if we are filling the cache
@@ -86,14 +89,6 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-
-                # Set no cache of HEAD request methods
-                set $nocache 0; 
-                if ($request_method = HEAD ) {                
-                        set $nocache 1;        
-                }
-                proxy_no_cache $nocache;
-
                 proxy_http_version 1.1;
                 proxy_pass http://wsus/;
                 proxy_pass_request_headers      on;
@@ -103,12 +98,12 @@ http {
     }
     ############## End WSUS Cache ##############
 
-    ############## Begin Microsoft Cache ##############
+    ############## Begin Microsoft Windows Update Cache ##############
 
     server {
         listen       80;
         ignore_invalid_headers      off;
-        server_name     windowsupdate.microsoft.com download.windowsupdate.com tlu.dl.delivery.mp.microsoft.com *.windowsupdate.microsoft.com *.download.windowsupdate.com *.tlu.dl.delivery.mp.microsoft.com;
+        server_name     windowsupdate.microsoft.com download.windowsupdate.com *.windowsupdate.microsoft.com *.download.windowsupdate.com;
 
         proxy_connect_timeout       300;
         proxy_send_timeout          300;
@@ -117,10 +112,13 @@ http {
 
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
+        proxy_cache_methods GET;
         proxy_cache_lock on;
 
         # Wait x seconds before sending file to client
         proxy_cache_lock_timeout 600s;
+
+        # Redact the $host from Microsoft keys due to clustering (eg. Same file, different URL's, same paths)
         proxy_cache_key "$uri $slice_range";
         slice 16M;
 
@@ -129,14 +127,6 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-
-                # Set no cache of HEAD request methods
-                set $nocache 0;
-                if ($request_method = HEAD ) {
-                        set $nocache 1;
-                }
-                proxy_no_cache $nocache;
-
                 proxy_http_version 1.1;
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
@@ -147,7 +137,52 @@ http {
                 proxy_hide_header ETag;
         }
     }
-    ############## End Microsoft Cache ##############
+
+    ############## End Microsoft Windows Update Cache ##############
+
+    ############## Begin Microsoft Store Cache ##############
+
+    server {
+        listen       80;
+        ignore_invalid_headers      off;
+        server_name     tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com;
+
+        proxy_connect_timeout       300;
+        proxy_send_timeout          300;
+        proxy_read_timeout          300;
+        send_timeout                300;
+
+        proxy_cache cache;
+        proxy_cache_valid 200 206 14d;
+        proxy_cache_methods GET;
+        proxy_cache_lock on;
+
+        # Wait x seconds before sending file to client
+        proxy_cache_lock_timeout 600s;
+
+        # Redact the $host from Microsoft keys due to clustering (eg. Same file, different URL's, same paths)
+        proxy_cache_key "$uri $slice_range";
+        slice 16M;
+
+        # Set maximum size to not cache to prevent games from Microsoft Store filling the cache
+        proxy_no_cache $range_no_cache;
+
+        # Set the 'age' to a value larger than the expected fill time
+        proxy_cache_lock_age 600s;
+        proxy_cache_use_stale updating;
+
+        location / {
+                proxy_http_version 1.1;
+                proxy_pass http://${host};
+                proxy_pass_request_headers      on;
+                proxy_set_header Host      $host;
+                proxy_set_header Range     $slice_range;
+                proxy_set_header Upgrade-Insecure-Requests "";
+                proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                proxy_hide_header ETag;
+        }
+    }
+    ############## End Microsoft Store Cache ##############
 
     ############## Begin Default Cache (Everything Else) ##############
 
@@ -162,6 +197,7 @@ http {
 
         proxy_cache cache;
         proxy_cache_valid 200 206 14d;
+        proxy_cache_methods GET;
         proxy_cache_lock on;
 
         # Wait x seconds before sending file to client
@@ -174,14 +210,6 @@ http {
         proxy_cache_use_stale updating;
 
         location / {
-
-                # Set no cache of HEAD request methods
-                set $nocache 0;
-                if ($request_method = HEAD ) {
-                        set $nocache 1;
-                }
-                proxy_no_cache $nocache;
-
                 proxy_http_version 1.1;
                 proxy_pass http://${host};
                 proxy_pass_request_headers      on;
